XW-4904 | Fix jumping around glocal nav #house-of-pain

--- a/app/styles/component/design-system/_community-bar.scss
+++ b/app/styles/component/design-system/_community-bar.scss
@@ -9,4 +9,8 @@
 			z-index: $z-6;
 		}
 	}
+
+	.site-head-headroom-not-top & {
+		margin-top: 85px;
+	}
 }
